@@ -144,14 +144,6 @@ $cursorClass = ($page == 'explore') ? 'cursorPointer' : 'cursorGrab';
 							echo $qls->App->buildStandard($partitionData[$face], $rackObj, $objectID, $face, $cabinetView);
 							echo '</div>';
 							
-							/*
-							$templateImgAttr = $face == 0 ? 'frontImage' : 'rearImage';
-							$templateImgPath = '/images/templateImages/'.$objectTemplate[$templateID][$templateImgAttr];
-							echo '<div style="background-image: url('.$templateImgPath.'); background-size: 100% 100%" data-objectID="'.$objectID.'" data-templateID="'.$templateID.'" data-RUSize="'.$RUSize.'" data-objectFace="'.$face.'" class="parent partition category'.$categoryName.' border-black obj-style initialDraggable rackObj selectable">';
-							echo buildVisualPartitions($objectTemplate[$templateID]['partitionData'][$face], $objectID, $face, $qls, $function, $objName);
-							echo '</div>';
-							*/
-							
 						} else if($cabinetView == 'name') {
 							
 							echo '<div data-objectID="'.$objectID.'" data-templateID="'.$templateID.'" data-RUSize="'.$RUSize.'" data-objectFace="'.$face.'" class="parent partition category'.$categoryName.' border-black obj-style initialDraggable rackObj selectable"><strong>'.$objName.'</strong></div>';
@@ -177,139 +169,3 @@ $cursorClass = ($page == 'explore') ? 'cursorPointer' : 'cursorGrab';
 	<div class="cab-height cabinet-foot"></div>
 	<div class="cab-height cabinet-blank"></div>
 	<div class="cab-height cabinet-foot"></div>
-
-<?php
-
-function buildVisualPartitions($data, $objectID, $face, &$qls, $function, $objName, &$depthCounter=0){
-	$html = '';
-	foreach($data as $element){
-		$flexDirection = $element['direction'];
-		$flex = $element['flex'];
-		$flexClass = $depthCounter == 0 ? 'flex-container-parent' : 'flex-container';
-		
-		switch($element['partitionType']){
-			case 'Generic':
-				$html .= '<div class="'.$flexClass.'" style="flex:'.$flex.'; flex-direction:'.$flexDirection.';">';
-				if(isset($element['children'])){
-					$depthCounter++;
-					$html .= buildVisualPartitions($element['children'], $objectID, $face, $qls, $function, $objName, $depthCounter);
-				}
-				break;
-				
-			case 'Connectable':
-				$html .= '<div class="'.$flexClass.' partition" style="flex:'.$flex.'; flex-direction:'.$flexDirection.';" data-depth="'.$depthCounter.'">';
-				break;
-				
-			case 'Enclosure';
-				$html .= '<div class="'.$flexClass.' partition selectable" style="flex:'.$flex.'; flex-direction:'.$flexDirection.';" data-depth="'.$depthCounter.'">';
-				
-				$encX = $element['encLayoutX'];
-				$encY = $element['encLayoutY'];
-				$html .= '<table class="enclosure border-black" style="border-collapse: collapse;height:100%;width:100%;">';
-					for ($y = 0; $y < $encY; $y++){
-						$html .= '<tr style="width:100%;height:'.(100/$encY).'%;">';
-						for ($x = 0; $x < $encX; $x++){
-							$html .= '<td class="enclosureTable insertDroppable" style="width:'.(100/$encX).'%;height:'.(100/$encY).'%;" data-encX="'.$x.'" data-encY="'.$y.'">';
-							if(isset($GLOBALS['insert'][$objectID][$face][$depthCounter][$x][$y])) {
-								$insertObject = $GLOBALS['insert'][$objectID][$face][$depthCounter][$x][$y];
-								$insertID = $insertObject['id'];
-								$insertTemplate = $GLOBALS['objectTemplate'][$insertObject['template_id']];
-								$insertData = $insertTemplate['partitionData'][0];
-								$categoryName = $GLOBALS['category'][$insertTemplate['templateCategory_id']]['name'];
-								$templateImgPath = '/images/templateImages/'.$insertTemplate['frontImage'];
-								$html .= '<div style="background-image: url('.$templateImgPath.'); background-size: 100% 100%;height:100%;" class="category'.$categoryName.' rackObj selectable" data-objectid="'.$insertID.'" data-objectFace="0" data-depth="0"></div>';
-							}
-							$html .= '</td>';
-						}
-						$html .= "</tr>";
-					}
-				$html .= '</table>';
-				
-				break;
-		}
-		$html .= '</div>';
-		$depthCounter++;
-	}
-	return $html;
-}
-
-function buildPortInsert($insertName, $insertFunction, $data, $depthCounter, $insertID, $endpointTrunked, $categoryName=''){
-	$html = '';
-	foreach($data as $element){
-		$flexDirection = $element['direction'];
-		if($depthCounter == 0) {
-			$flex = $flexDirection == 'column' ? $element['hunits']/10 : $element['vunits']*0.5;
-			$class = ' category'.$categoryName.' parent partition rackObj obj-style obj-border insertDraggable selectable';
-			$dataAttr = ' data-objectid="'.$insertID.'"';
-		} else {
-			$flex = $element['flex'];
-			$class = ' partition';
-			$dataAttr = '';
-		}
-		$selectable = $element['partitionType'] == 'Generic' ? '' : ' selectable';
-		$html .= '<div class="insert '.$selectable.$class.'" style="display:flex;flex:'.$flex.'; flex-direction:'.$flexDirection.';"'.$dataAttr.' data-objectFace="0" data-depth="'.$depthCounter.'">';
-		switch($element['partitionType']){
-			case 'Generic':
-				if(isset($element['children'])){
-					$depthCounter++;
-					$html .= buildPortInsert($insertName, $insertFunction, $element['children'], $depthCounter, $insertID, $endpointTrunked);
-				}
-				break;
-				
-			case 'Connectable':
-				$portX = $element['portLayoutX'];
-				$portY = $element['portLayoutY'];
-				$html .= '<table class="border-black portTable" style="border-collapse: collapse;height:100%;width:100%;">';
-					for ($y = 0; $y < $portY; $y++){
-						$html .= '<tr>';
-						for ($x = 0; $x < $portX; $x++){
-							$html .= createPort($element, $x, $y, $depthCounter, true, $endpointTrunked, 0, $insertID, $insertName, $insertFunction);
-						}
-						$html .= "</tr>";
-					}
-				$html .= '</table>';
-				break;
-		}
-		$html .= '</div>';
-		$depthCounter++;
-	}
-	return $html;
-}
-
-function getPortIndex($orientation, $x, $y, $portX, $portY){
-	$portTotal = $portX * $portY;
-	if($orientation == 1) {
-		$portIndex = ($y * $portX) + $x;
-	} else if($orientation == 2) {
-		$portIndex = ($x * $portY) + $y;
-	} else if($orientation == 3) {
-		$portIndex = ($y * $portX) + (($portX - $x) - 1);
-	} else if($orientation == 4) {
-		$portIndex = ($portTotal - ($y * $portX)) - ($portX - $x);
-	}
-	return $portIndex;
-}
-
-function createPort($obj, $x, $y, $depth, $insert, $endpointTrunked, $objFace, $objID, $insertName='', $insertFunction=''){
-	$layoutX = $obj['portLayoutX'];
-	$layoutY = $obj['portLayoutY'];
-	$portIndex = getPortIndex($obj['portOrientation'], $x, $y, $layoutX, $layoutY);
-	$portHeight = 100/$layoutY;
-	$portWidth = 100/$layoutX;
-	$populatedClass = 'unpopulated';
-	if(in_array($objID.'-'.$objFace.'-'.$depth.'-'.$portIndex, $GLOBALS['patchedPortTable'])) {
-		$populatedClass = 'populated';
-	}
-	if(in_array($objID.'-'.$objFace.'-'.$depth.'-'.$portIndex, $GLOBALS['populatedPortTable'])) {
-		$populatedClass = 'populated';
-	}
-	$endpointTrunkedClass = $endpointTrunked ? 'endpointTrunked' : '';	
-	$populatedCode39 = isset($populatedPorts[$depth][$portIndex]) ? $populatedPorts[$depth][$portIndex] : '';
-	$portSeparator = $insertFunction == 'Passive' ? '.' : '';
-	$portPrefix = $insert ? $insertName.$portSeparator.$obj['portPrefix'] : $obj['portPrefix'];
-	$html .= '<td style="width:'.$portWidth.'%;height:'.$portHeight.'%;">';
-	$html .= '<div id="port-'.$objID.'-'.$objFace.'-'.$depth.'-'.$portIndex.'" class="port '.$populatedClass.' '.$endpointTrunkedClass.'" data-Code39="'.$populatedCode39.'" data-portIndex="'.$portIndex.'" title="'.$portPrefix.($obj['portNumber']+$portIndex).'"></div>';
-	$html .= '</td>';
-	return $html;
-}
-?>
